auto-sync/utils/grafana-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-nodeport
  namespace: logging
spec:
  type: NodePort
  selector:
    app.kubernetes.io/instance: loki-stack
    app.kubernetes.io/name: grafana
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 32000
